# sky-midi

client/: index.html  package-lock.json  package.json
client/core/common/: Common_Provider.ts
client/core/common/domain/: Either.ts
client/core/common/domain/helpers/: UID_Helper.ts
client/core/common/presenter/: Ploc.ts
client/core/keypress/: KeyPress_Provider.ts
client/core/keypress/data/: KeyPressApi.ts
client/core/keypress/domain/: KeyPressApi_Repository.ts  KeyPress_App.ts
client/core/keypress/domain/models/: KeyPressCode.ts
client/core/midi/: Midi_Provider.ts
client/core/midi/data/: MidiApi.ts  MidiLogs.ts  MidiMemory.ts
client/core/midi/domain/: MidiApi_Repository.ts  MidiLogs_Repository.ts  MidiMemory_Repository.ts  Midi_App.ts
client/core/midi/domain/models/: MidiBinding.ts  MidiBindingKind.ts  MidiNoteEvent.ts  MidiUpdate.ts
client/core/midi/presenter/: Midi_Ploc.ts  Midi_State.ts
client/src/: App.vue  colors.scss
client/src/components/midi/: DeviceInfo.vue  DeviceSelector.vue  KeyBindings.vue  KeyMidiInput.vue  Midi.vue  MidiLogs.vue
client/src/components/sidebar/: Sidebar.vue  SidebarAction.vue
client/src/hooks/: usePlocState.ts
keypress/: CMakeLists.txt  binding.gyp  package-lock.json  package.json
keypress/src/: keypress.js
keypress/src/macos/: keycodes.h  keypress.cc
keypress/src/win32/: keycodes.h  keypress.cc
server/: app.js  package-lock.json  package.json
